- #258407 Fix field template name to allow for easy overridability.
- #274038 by jpetso : Fix non-JS mode for 'add more' button.
- #275192 by jpetso : Attach AHAH behaviors to newly inserted widgets on JS 'add more'.
- #271710 by pwolanin : tests for UI field CRUD, and node form generation.
- #266696 by pwolanin : Unable to change the label or widget type for a field.

CCK 6.2.beta
============

Content Generate (new feature)
- #257874 and #187599 provide a way to auto-generate field content for the devel module.
- #261633 E_All fix for content_generate.

Usability
- #227439, #227437, #227945 Rework field and widget type handling to simplify the intial screen when choosing a field and widget type by making it a two-step process where you see only the widgets that apply to the field. Move the setting of the field label to the same place where you set the field name. Change the field edit screen to keep it from showing all the different widgets again and instead just display the current widget. Then add a button to change the widget which will take you to another screen to make the change since the rest of the page will need to change when the widget changes. Keep the changes to the widget label  in that separate process, too, since that affects the menu tabs that need to be changed before redirecting back to the main page.

Update processing
- #256141 Add old updates back to fieldgroup.install for situations where the module was briefly enabled and then disabled and never used so the update process doesn't throw an error for the missing updates.
- Fix potential E_All error in userreference after update.
- Fix E_All error that can come up after update if text module is using format column.
- Change the check in _content_type_info to be sure the new 'active' column exists before trying to query the table during installation and updates. Also fix E_All notice for non-existant db_columns during install and update.